[package]
name = "ccache"
version = "0.1.0"
authors = ["Luca Fulchir <luker@fenrirproject.org>"]
edition = "2018"
description = "Composable Caches"

license = "Apache-2.0"
homepage = "https://github.com/LucaFulchir/ccache"
repository = "https://github.com/LucaFulchir/ccache"
readme = "README.md"
keywords = [ "cache", "lru", "slru", "wtinylfu", "wtlfu" ]
categories = [ "caching" ]


[dependencies]

bitfield = "0.13"
hashbrown = { version = "0.11", features = ["raw"] }
rand = "0.8"
thiserror = "1.0"

